fix: fix alignment of nav bar
issue: the whole navigation bar was linked to the home page on small screen devices. align-self property was added to the a tag.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,10 @@ The method / Code from CSS-TRICKS(https://css-tricks.com/full-browser-width-bars
   left: 100%;
 }
 
+.header a {
+  align-self: flex-start;
+}
+
 .logo {
   width: 6rem;
   margin: .5rem 1rem;
